<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/note_colour">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note_title"
        android:hint="Title"
        android:textColor="@color/black"
        android:textSize="23dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_margin="5dp"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/input_contents"
            android:layout_width="match_parent"
            android:layout_height="417dp"
            android:layout_margin="10dp"
            android:background="@color/content_colour"
            android:hint="Contents"
            android:lines="10"
            android:padding="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:text="SAVE"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="saveButtonOnClick"/>

    </LinearLayout>

</LinearLayout>